--- a/app/src/main/res/layout/fragment_film_detail.xml
+++ b/app/src/main/res/layout/fragment_film_detail.xml
@@ -15,6 +15,13 @@
         android:textSize="16sp"
         />
 
+    <ImageView
+        android:id="@+id/imageV"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:scaleType="centerCrop"
+        />
+
     <TextView
         android:id="@+id/originalTitle"
         android:layout_width="match_parent"
